--- a/youtube.html
+++ b/youtube.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="Youtube">
+    <img src="imagens/YouTube.jpg" alt="Youtube">
     <a href="https://www.youtube.com/@1970Bito/featured" target="_blank">ACESSE</a>
 </body>
 </html>
